[package]
name = "any-menu-app"
version = "0.1.0"
description = "A powerful input method assistant / editor assistant"
authors = ["LincZero"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.6" # 模拟输入
once_cell = "1.21.3"
tauri-plugin-log = { version = "2", features = ["colored"] } # 日志插件
fern = "0.7.1" # 日志高亮
log = "0.4.28" # 日志门面
chrono = "0.4.42" # 日期时间
tauri-plugin-http = "2" # HTTP 请求插件 (用于在线词典/脚本)
rdev = { version = "0.5.3", features = ["unstable_grab"] } # 监听和发送跨平台鼠键 (用于高级快捷键)

# PC端
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2" # 全局快捷键插件

# winapi (windows) 端
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "winnt"] } # (用于剪切板等)
uiautomation = { version = "0.24.0", features = ["input", "process", "clipboard"] }
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Ole",
] }
